// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Letter (unit tests) when has a tag letter should match the snapshot 1`] = `
<kv-tag-letter label="Tag Letter" tag-letter="T">
  <mock:shadow-root>
    <div class="tag-letter-container">
      <div class="letter-avatar">
        <div class="avatar">
          T
        </div>
      </div>
      <div class="label">
        Tag Letter
      </div>
    </div>
  </mock:shadow-root>
</kv-tag-letter>
`;

exports[`Tag Letter (unit tests) when uses default props should match the snapshot 1`] = `
<kv-tag-letter label="Tag Letter Default">
  <mock:shadow-root>
    <div class="tag-letter-container">
      <div class="letter-avatar">
        <div class="avatar"></div>
      </div>
      <div class="label">
        Tag Letter Default
      </div>
    </div>
  </mock:shadow-root>
</kv-tag-letter>
`;
